# youtube-intelligence

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SYSTEM_REVIEW.md  firebase.json  firestore.indexes.json  firestore.rules  pyproject.toml  requirements.md  requirements.txt  storage.rules
.claude/: settings.json  statusline
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
analyzer/: README.md  requirements.txt
analyzer/scripts/: check_remaining.py  run_description_analysis.py  run_tag_analysis.py  run_thumbnail_analysis.py  run_title_analysis.py  sync_channel_flags.py
analyzer/src/: __init__.py  config.py  firebase_client.py  gemini_client.py  main.py
analyzer/tests/: conftest.py  test_local_text_features.py
config/: channels.json  channels.json.example
data/: channels-review.csv  channels-review.csv.example
docs/: API_REFERENCE.md  DEPLOYMENT.md  ML_INSIGHTS_PLAN.md  TECHNICAL_DOCUMENTATION.md  TROUBLESHOOTING.md
functions/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
functions/scripts/: test-image-model.ts
functions/src/: cli.ts  engine.ts  firebase.ts  (+8 more)
insights/: README.md  requirements.txt
recommender/: README.md  requirements.txt
scraper/: README.md  package-lock.json  package.json
shared/: __init__.py  config.py  constants.py  firebase_utils.py  gemini_utils.py
(+75 files in other folders)
